[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_study = { path = ".." }
bevy = { path = "../../libs/bevy" }
rand = "0.8.4"

[[example]]
name = "hello_ecs"
path = "examples/hello_ecs.rs"
